complete packaging app

--- a/notebooks/analyze_stock_event.ipynb
+++ b/notebooks/analyze_stock_event.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "888129f6",
    "metadata": {},
    "outputs": [
@@ -375,8 +375,7 @@
     "source_urls = list(set([d.metadata[\"source\"] for d in similar_docs]))\n",
     "print(\"Sources:\", source_urls)\n",
     "print(\"Response:\", end=\"\")\n",
-    "for r in response:\n",
-    "    print(r.content, end=\"\")"
+    "print(response.content)"
    ]
   }
  ],
